WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222414
[GTK] Adwaita controls have glitchy corners
https://bugs.webkit.org/show_bug.cgi?id=222414
Summary
[GTK] Adwaita controls have glitchy corners
Alice Mikhaylenko
Reported
2021-02-25 05:28:08 PST
See the patch.
Attachments
Patch
(4.62 KB, patch)
2021-02-25 05:33 PST
,
Alice Mikhaylenko
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alice Mikhaylenko
Comment 1
2021-02-25 05:33:54 PST
Created
attachment 421516
[details]
Patch Hm, webkit-patch upload doesn't seem to work, attaching manually.
EWS
Comment 2
2021-02-25 07:06:07 PST
Committed
r273483
: <
https://commits.webkit.org/r273483
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 421516
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug