[GTK] Adwaita controls have glitchy corners https://bugs.webkit.org/show_bug.cgi?id=222414

When drawing 2 rounded rectangles of different size within each other, the inner rectangle
should have a smaller corner radius, matching the offset. For example, if we draw a button
with a 1px border via 2 rectangles, the inner rectangle should have 1px smaller radius to
prevent the corners from looking thicker than they should be.

Patch by Alexander Mikhaylenko <alexm@gnome.org> on 2021-02-25
Reviewed by Carlos Garcia Campos.

* platform/adwaita/ThemeAdwaita.cpp:
(WebCore::ThemeAdwaita::paintCheckbox):
(WebCore::ThemeAdwaita::paintButton):
(WebCore::ThemeAdwaita::paintSpinButton):
* rendering/RenderThemeAdwaita.cpp:
(WebCore::RenderThemeAdwaita::paintTextField):
(WebCore::RenderThemeAdwaita::paintProgressBar):
(WebCore::RenderThemeAdwaita::paintSliderTrack):

Canonical link: https://commits.webkit.org/234562@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273483 268f45cc-cd09-0410-ab3c-d52691b4dbfc